--- a/charts/myapp/templates/deployment.yaml
+++ b/charts/myapp/templates/deployment.yaml
@@ -1,7 +1,3 @@
-# ===============================================
-# 1. Backend Deployment (Python/FastAPI)
-# הפריסה של קוד ה-Python/FastAPI שלך
-# ===============================================
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -64,10 +60,6 @@ spec:
           periodSeconds: 5
           
 ---
-# ===============================================
-# 2. Frontend Deployment (React/Nginx)
-# הפריסה של קוד ה-React שלך
-# ===============================================
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -90,3 +82,4 @@ spec:
         image: "{{ .Values.frontend.image }}:{{ .Values.frontend.tag }}"
         ports:
         - containerPort: 80
+        imagePullPolicy: {{ .Values.frontend.imagePullPolicy | default "IfNotPresent" }}
