--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn==0.23.0
 psycopg2-binary==2.9.6
 prometheus-client==0.17.0
 sqlalchemy==2.0.19
-websockets  # <--- זה התיקון!
+websockets  
 pytest==7.4.0
 pytest-cov==4.1.0
 httpx==0.24.1
